fix spacing and font

--- a/src/components/pages/error/error.scss
+++ b/src/components/pages/error/error.scss
@@ -2,12 +2,14 @@
 
 .ama {
   &-error-page {
-    h1 {
-      @include index.h2-normal;
+    padding: 80px 0;
+
+    h4 {
+      @include index.h4-normal;
     }
 
     span {
-      @include index.text-big-bold;
+      @include index.text-big-normal;
     }
 
     .link {
